apps/auth-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-frontend
  namespace: bidly
  labels:
    app.kubernetes.io/name: auth-frontend
    app.kubernetes.io/version: v5
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: auth-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: auth-frontend
        app.kubernetes.io/version: v5
    spec:
      containers:
        - name: auth-frontend
          image: aididalam/bidly-frontend-auth:main-5
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          livenessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
