apps/auth-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-frontend
  namespace: bidly
spec:
  selector:
    app.kubernetes.io/name: auth-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
